tests/paczka1/fuzzy1/66831576.err
Error in line 7: v9p A670 6,0
Error in line 10: A208 A99 52,9
Error in line 19: CQc6TDa A331 86,1
Error in line 12: 2pLVbBd1 A670 37,4
Error in line 36: o43CJqLqTVX A 78,2
Error in line 32: 2pLVbBd1 A208 25,7
